# online-q-chunking

./: pyproject.toml  run.py
jaxgcrl/agents/: __init__.py
jaxgcrl/agents/accrl/: __init__.py  accrl.py  losses.py  networks.py
jaxgcrl/agents/crl/: crl.py  losses.py
jaxgcrl/envs/: ant.py  ant_ball.py  ant_ball_maze.py  ant_maze.py  ant_push.py  half_cheetah.py  humanoid.py  humanoid_maze.py  pusher.py  pusher2.py  reacher.py  simple_maze.py
jaxgcrl/utils/: config.py  env.py  evaluator.py
plots/: plots.ipynb
scripts/: run.sh  run_ant.sh  run_big_net.sh  run_entropy.sh  run_noisy.sh  run_rr.sh  setup.sh
