[project]
name = "jaxgcrl"
version = "0.2.8"
description = "Blazingly fast goal-conditioned environments based on MJX and BRAX."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "pip",
  "jax[cuda13]",
  "flax",
  "brax",
  "matplotlib",
  "mujoco",
  "mujoco-mjx",
  "numpy",
  "scipy",
  "tyro",
  "warp-lang",
  "wandb",
  "wandb-osh",
]

[project.scripts]
jaxgcrl = "run:cli"

[project.urls]
homepage = "https://michalbortkiewicz.github.io/JaxGCRL/"

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[build-system]
requires = [ "setuptools", "wheel" ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }
include-package-data = true
py-modules = [ "run" ]

[tool.setuptools.package-data]
"jaxgcrl.envs" = ["**/assets/*"]

[tool.ruff]
line-length = 110
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
